--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -8,7 +8,7 @@
 {% block title %}User
 {% endblock %}
 
-{% block body %}
+{% block innerContent %}
 	<header>
 
 		<div class="container-fluid">
@@ -218,6 +218,7 @@
 
 
 		<!-- DEBUT DE LA TROISIEME PARTIE-->
+	<div class="container">
 
 		<article class="row">
 			<div class="col-6">
@@ -236,9 +237,11 @@
 				<li>Adepte du fitness</li>
 			</ul>
 		</div>
-	</article>
+		</article>
+	</div>
 
-
+	<div class="container">
+	
 	<section id="slideavis">
 
 
@@ -333,6 +336,7 @@
 
 
 	</section>
+	</div>
 
 	<!-- FIN DE LA TROISIEME PARTIE-->
 
