--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -110,7 +110,7 @@
 
 				<div class="d-flex flex-column justify-content-between col-4 offset-6">
 					<div class="d-flex justify-content-between">
-						<a class="btn shadow btn-favoris" href="#">Ajouter en favoris</a>
+						<a class="btn shadow btn-favoris" href="{{path('platon_favoris', {'user': user.id})}}">Ajouter en favoris</a>
 						<a class="btn shadow btn-cours" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Prendre un cours</a>
 					</div>
 
