--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -547,26 +547,26 @@
 				<div class="col-12 col-md-3">
 					<h4>À propos</h4>
 					<ul>
-						<li><ahref="{{path('platon_quisommesnous')}}">Qui sommes-nous ?</a></li>
-						<li><ahref="{{path('platon_mentionslegales')}}">Mentions légales</a></li>
-						<li><ahref="{{path('platon_cgu')}}">CGU</a></li>
+						<li><a href="{{path('platon_quisommesnous')}}">Qui sommes-nous ?</a></li>
+						<li><a href="{{path('platon_mentionslegales')}}">Mentions légales</a></li>
+						<li><a href="{{path('platon_cgu')}}">CGU</a></li>
 					</ul>
 				</div>
 
 				<div class="col-12 col-md-3">
 					<h4>Contact</h4>
 					<ul>
-						<li><ahref="{{path('platon_contact')}}">Contactez-nous</a></li>
-						<li><ahref="{{path('platon_informationslegales')}}">Informations légales</a></li>
-						<li><ahref="{{path('platon_parametresdescookies')}}">Paramètres des cookies</a></li>
+						<li><a href="https://discord.gg/hPDD6jDBvQ">Contactez-nous</a></li>
+						<li><a href="{{path('platon_informationslegales')}}">Informations légales</a></li>
+						<li><a href="{{path('platon_parametresdescookies')}}">Paramètres des cookies</a></li>
 					</ul>
 				</div>
 
 				<div class="col-12 col-md-3">
 					<h4>Platon</h4>
 					<ul>
-						<li><ahref="{{path('app_how_to')}}">Comment ça marche ?</a></li>
-						<li><ahref="{{path('platon_lachartedeplaton')}}">La charte de Platon</a></li>
+						<li><a href="{{path('app_how_to')}}">Comment ça marche ?</a></li>
+						<li><a href="{{path('platon_lachartedeplaton')}}">La charte de Platon</a></li>
 					</ul>
 				</div>
 
