--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -108,11 +108,16 @@
 				</div>
 
 				<div class="d-flex flex-column justify-content-between col-4 offset-6">
+				{% if app.user.id is same as(user.id) %}
 					<div class="d-flex justify-content-between">
-						<a class="btn shadow btn-favoris" href="{{path('platon_favoris', {'user': user.id})}}">Ajouter en favoris</a>
-						<a class="btn shadow btn-cours" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Prendre un cours</a>
-					</div>
-
+						<a class="btn shadow btn-favoris" href="{{path('app_profile')}}">Modifier mes infos</a>
+					<div>
+					{% else %}
+						<div class="d-flex justify-content-between">
+							<a class="btn shadow btn-favoris" href="{{path('platon_favoris', {'user': user.id})}}">Ajouter en favoris</a>
+							<a class="btn shadow btn-cours" data-bs-toggle="modal" data-bs-target="#exampleModal" href="#">Prendre un cours</a>
+						</div>
+				{% endif %}
 					<div class="d-flex personalite justify-content-between">
 						{% for personnalitys in user.infosUser.personnality %}
 							<div class="tag">
