--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -228,7 +228,7 @@
           </div>
 
         </div>
-                    {% endif %}
+          {% endif %}
           {% endfor %}
       </div>
     </section>
@@ -335,10 +335,10 @@
 
         <div class="d-flex">
 
-
+          {% for ticket in app.user.tickets %}
+          {% if ticket.status is same as(3) %}
           <div class="section2 col-3 offset-1">
-            {% for ticket in app.user.tickets %}
-                {% if ticket.status is same as(3) %}
+
             <div class="courspasse col-9">
                 
               <div class="d-flex">
@@ -443,15 +443,154 @@
                 
                 </div>
             </div>
-                {% endif %}
-            {% endfor %}
+
 
           </div>
 
         
-
+            
         </div>
+            {% endif %}
+            {% endfor %}
 
+
+
+
+                      {#  {% for userTicket in tickets %} #}
+                {# recherche des données présentes dans ticket #}
+                 {# <pre>
+                    {{ dump(userTicket.receiver.infosUser.subCategories[0].name) }}
+                </pre>  #}
+                {# {% if userTicket.status is same as(3) %}
+                    {{userTicket.sender.prenom}} <br> #}
+                    {# ajouter les knowledges de la table InfosUser du User concerné #}
+                    {# Avis : {{userTicket.sender.infosUser.opinion}}/5 <br> 
+                    {{userTicket.receiver.infosUser.subCategories[0].name}} <br>
+                    {{userTicket.content}} <br>
+                    {{userTicket.status}} <br>
+                    Temps donné : 1 Heure<br>
+                    Note : {{userTicket.sender.infosUser.opinion}}/5<br>
+                {% endif %}
+            {% endfor %}
+        </div> #}
+
+            {% for userTicket in tickets %}
+            {% if userTicket.status is same as(3) %}
+          <div class="section2 col-3 offset-1">
+
+            <div class="courspasse col-9">
+                
+              <div class="d-flex">
+                <div class="d-flex photobadge">
+                    <img class="portrait" src="{{asset('assets/img/michel.png')}}" alt="photo de Michel">
+                    <img class="medaille" src="{{asset('assets/icones/medaille_bleu.svg')}}" alt="badge">
+                  </div>
+                
+                  <div class="informations">
+                      <p class="nom">{{userTicket.sender.prenom}}</p>
+                      <p>{{userTicket.sender.infosUser.subCategories[0].name}}</p>
+                      <div class="d-flex">
+                          <p>Avis : </p>
+                          <div class="etoile">
+                            <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8.48075 0.610094L6.16169 5.14487L0.973099 5.87441C0.0426337 6.00456 -0.330263 7.11085 0.344502 7.74449L4.09833 11.2723L3.21048 16.2558C3.05067 17.1565 4.0344 17.8313 4.85833 17.41L9.5 15.057L14.1417 17.41C14.9656 17.8279 15.9493 17.1565 15.7895 16.2558L14.9017 11.2723L18.6555 7.74449C19.3303 7.11085 18.9574 6.00456 18.0269 5.87441L12.8383 5.14487L10.5193 0.610094C10.1037 -0.198219 8.89981 -0.208494 8.48075 0.610094Z" fill="#25366F"/>
+                            </svg>
+                            <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8.48075 0.610094L6.16169 5.14487L0.973099 5.87441C0.0426337 6.00456 -0.330263 7.11085 0.344502 7.74449L4.09833 11.2723L3.21048 16.2558C3.05067 17.1565 4.0344 17.8313 4.85833 17.41L9.5 15.057L14.1417 17.41C14.9656 17.8279 15.9493 17.1565 15.7895 16.2558L14.9017 11.2723L18.6555 7.74449C19.3303 7.11085 18.9574 6.00456 18.0269 5.87441L12.8383 5.14487L10.5193 0.610094C10.1037 -0.198219 8.89981 -0.208494 8.48075 0.610094Z" fill="#25366F"/>
+                            </svg>
+                            <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8.48075 0.610094L6.16169 5.14487L0.973099 5.87441C0.0426337 6.00456 -0.330263 7.11085 0.344502 7.74449L4.09833 11.2723L3.21048 16.2558C3.05067 17.1565 4.0344 17.8313 4.85833 17.41L9.5 15.057L14.1417 17.41C14.9656 17.8279 15.9493 17.1565 15.7895 16.2558L14.9017 11.2723L18.6555 7.74449C19.3303 7.11085 18.9574 6.00456 18.0269 5.87441L12.8383 5.14487L10.5193 0.610094C10.1037 -0.198219 8.89981 -0.208494 8.48075 0.610094Z" fill="#25366F"/>
+                            </svg>
+                            <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M8.48075 0.610094L6.16169 5.14487L0.973099 5.87441C0.0426337 6.00456 -0.330263 7.11085 0.344502 7.74449L4.09833 11.2723L3.21048 16.2558C3.05067 17.1565 4.0344 17.8313 4.85833 17.41L9.5 15.057L14.1417 17.41C14.9656 17.8279 15.9493 17.1565 15.7895 16.2558L14.9017 11.2723L18.6555 7.74449C19.3303 7.11085 18.9574 6.00456 18.0269 5.87441L12.8383 5.14487L10.5193 0.610094C10.1037 -0.198219 8.89981 -0.208494 8.48075 0.610094Z" fill="#25366F"/>
+                            </svg>
+                            <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M18.0269 6.02965L12.8385 5.28047L10.5199 0.626133C10.3114 0.210234 9.90486 0 9.49828 0C9.09418 0 8.69043 0.207422 8.48129 0.626133L6.16197 5.28012L0.973188 6.02859C0.0426947 6.16219 -0.330212 7.29738 0.344352 7.94777L4.09787 11.5689L3.20956 16.6834C3.08337 17.4139 3.67144 18 4.33005 18C4.50481 18 4.68453 17.9589 4.85715 17.8682L9.49899 15.4536L14.1405 17.8689C14.3127 17.9585 14.4921 17.9993 14.6661 17.9993C15.3255 17.9993 15.9146 17.4153 15.7884 16.6845L14.9012 11.5696L18.6554 7.94918C19.3303 7.29879 18.9574 6.16324 18.0269 6.02965ZM13.7115 10.3609L13.0692 10.9804L13.221 11.855L13.9129 15.8435L10.2927 13.9595L9.49934 13.5468L9.5004 2.39555L11.3093 6.02683L11.7056 6.82242L12.5921 6.95039L16.6413 7.53504L13.7115 10.3609Z" fill="#25366F"/>
+                            </svg>
+                          </div>
+                          <p class="note">{{userTicket.sender.infosUser.opinion}}/5</p>
+                      </div>
+                  </div>
+                    
+                  
+                </div>
+            
+                  
+                <div>
+                  
+                    <p class="nom text-center">{{userTicket.receiver.infosUser.subCategories[0].name}}</p>
+                  
+                    <div class="progression d-flex text-center">
+                      
+                      <div>
+                        <svg class="valide" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="9" cy="9" r="9" fill="#E5CFA9"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.0161 7.59276C13.2134 7.38845 13.3226 7.1148 13.3201 6.83075C13.3177 6.54671 13.2037 6.27499 13.0029 6.07414C12.802 5.87328 12.5303 5.75935 12.2463 5.75688C11.9622 5.75441 11.6886 5.8636 11.4842 6.06094L7.91685 9.62834L6.5161 8.2276C6.31179 8.03026 6.03814 7.92107 5.75409 7.92353C5.47005 7.926 5.19833 8.03993 4.99748 8.24079C4.79662 8.44165 4.68269 8.71336 4.68022 8.99741C4.67775 9.28145 4.78694 9.5551 4.98428 9.75942L7.15094 11.9261C7.35409 12.1292 7.62959 12.2433 7.91685 12.2433C8.20411 12.2433 8.47961 12.1292 8.68276 11.9261L13.0161 7.59276Z" fill="#FBFBFB"/>
+                        </svg>
+                        <p>Accepté</p>
+                      </div>
+                      
+                      <div class="ligne"></div>
+
+                        <div>
+                          <svg class="valide" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <circle cx="9" cy="9" r="9" fill="#E5CFA9"/>
+                          <path fill-rule="evenodd" clip-rule="evenodd" d="M13.0161 7.59276C13.2134 7.38845 13.3226 7.1148 13.3201 6.83075C13.3177 6.54671 13.2037 6.27499 13.0029 6.07414C12.802 5.87328 12.5303 5.75935 12.2463 5.75688C11.9622 5.75441 11.6886 5.8636 11.4842 6.06094L7.91685 9.62834L6.5161 8.2276C6.31179 8.03026 6.03814 7.92107 5.75409 7.92353C5.47005 7.926 5.19833 8.03993 4.99748 8.24079C4.79662 8.44165 4.68269 8.71336 4.68022 8.99741C4.67775 9.28145 4.78694 9.5551 4.98428 9.75942L7.15094 11.9261C7.35409 12.1292 7.62959 12.2433 7.91685 12.2433C8.20411 12.2433 8.47961 12.1292 8.68276 11.9261L13.0161 7.59276Z" fill="#FBFBFB"/>
+                          </svg>
+                          <p>En attente</p>
+                        </div>
+                      
+                      <div class="ligne"></div>
+                      
+                        <div>
+                          <svg class="valide" width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="9" cy="9" r="9" fill="#E5CFA9"/>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M13.0161 7.59276C13.2134 7.38845 13.3226 7.1148 13.3201 6.83075C13.3177 6.54671 13.2037 6.27499 13.0029 6.07414C12.802 5.87328 12.5303 5.75935 12.2463 5.75688C11.9622 5.75441 11.6886 5.8636 11.4842 6.06094L7.91685 9.62834L6.5161 8.2276C6.31179 8.03026 6.03814 7.92107 5.75409 7.92353C5.47005 7.926 5.19833 8.03993 4.99748 8.24079C4.79662 8.44165 4.68269 8.71336 4.68022 8.99741C4.67775 9.28145 4.78694 9.5551 4.98428 9.75942L7.15094 11.9261C7.35409 12.1292 7.62959 12.2433 7.91685 12.2433C8.20411 12.2433 8.47961 12.1292 8.68276 11.9261L13.0161 7.59276Z" fill="#FBFBFB"/>
+                            </svg>
+                          <p>Terminé</p>
+                        </div>
+
+                    </div>
+
+                </div>
+                  
+                <div class="valider">
+                  <p>Validé le : <span>10/05/2021</span></p>
+                  <p>Temps donné : <span>1 heure</span></p>
+                  <div class="d-flex">
+                    <p>Note :</p>
+                    <div class="etoile">
+                      <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.48075 0.610094L6.16169 5.14487L0.973099 5.87441C0.0426337 6.00456 -0.330263 7.11085 0.344502 7.74449L4.09833 11.2723L3.21048 16.2558C3.05067 17.1565 4.0344 17.8313 4.85833 17.41L9.5 15.057L14.1417 17.41C14.9656 17.8279 15.9493 17.1565 15.7895 16.2558L14.9017 11.2723L18.6555 7.74449C19.3303 7.11085 18.9574 6.00456 18.0269 5.87441L12.8383 5.14487L10.5193 0.610094C10.1037 -0.198219 8.89981 -0.208494 8.48075 0.610094Z" fill="#25366F"/>
+                      </svg>
+                      <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.48075 0.610094L6.16169 5.14487L0.973099 5.87441C0.0426337 6.00456 -0.330263 7.11085 0.344502 7.74449L4.09833 11.2723L3.21048 16.2558C3.05067 17.1565 4.0344 17.8313 4.85833 17.41L9.5 15.057L14.1417 17.41C14.9656 17.8279 15.9493 17.1565 15.7895 16.2558L14.9017 11.2723L18.6555 7.74449C19.3303 7.11085 18.9574 6.00456 18.0269 5.87441L12.8383 5.14487L10.5193 0.610094C10.1037 -0.198219 8.89981 -0.208494 8.48075 0.610094Z" fill="#25366F"/>
+                      </svg>
+                      <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.48075 0.610094L6.16169 5.14487L0.973099 5.87441C0.0426337 6.00456 -0.330263 7.11085 0.344502 7.74449L4.09833 11.2723L3.21048 16.2558C3.05067 17.1565 4.0344 17.8313 4.85833 17.41L9.5 15.057L14.1417 17.41C14.9656 17.8279 15.9493 17.1565 15.7895 16.2558L14.9017 11.2723L18.6555 7.74449C19.3303 7.11085 18.9574 6.00456 18.0269 5.87441L12.8383 5.14487L10.5193 0.610094C10.1037 -0.198219 8.89981 -0.208494 8.48075 0.610094Z" fill="#25366F"/>
+                      </svg>
+                      <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M8.48075 0.610094L6.16169 5.14487L0.973099 5.87441C0.0426337 6.00456 -0.330263 7.11085 0.344502 7.74449L4.09833 11.2723L3.21048 16.2558C3.05067 17.1565 4.0344 17.8313 4.85833 17.41L9.5 15.057L14.1417 17.41C14.9656 17.8279 15.9493 17.1565 15.7895 16.2558L14.9017 11.2723L18.6555 7.74449C19.3303 7.11085 18.9574 6.00456 18.0269 5.87441L12.8383 5.14487L10.5193 0.610094C10.1037 -0.198219 8.89981 -0.208494 8.48075 0.610094Z" fill="#25366F"/>
+                      </svg>
+                      <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M18.0269 6.02965L12.8385 5.28047L10.5199 0.626133C10.3114 0.210234 9.90486 0 9.49828 0C9.09418 0 8.69043 0.207422 8.48129 0.626133L6.16197 5.28012L0.973188 6.02859C0.0426947 6.16219 -0.330212 7.29738 0.344352 7.94777L4.09787 11.5689L3.20956 16.6834C3.08337 17.4139 3.67144 18 4.33005 18C4.50481 18 4.68453 17.9589 4.85715 17.8682L9.49899 15.4536L14.1405 17.8689C14.3127 17.9585 14.4921 17.9993 14.6661 17.9993C15.3255 17.9993 15.9146 17.4153 15.7884 16.6845L14.9012 11.5696L18.6554 7.94918C19.3303 7.29879 18.9574 6.16324 18.0269 6.02965ZM13.7115 10.3609L13.0692 10.9804L13.221 11.855L13.9129 15.8435L10.2927 13.9595L9.49934 13.5468L9.5004 2.39555L11.3093 6.02683L11.7056 6.82242L12.5921 6.95039L16.6413 7.53504L13.7115 10.3609Z" fill="#25366F"/>
+                      </svg>
+                  </div>
+
+                  </div>
+
+                
+                </div>
+            </div>
+
+
+          </div>
+
+        
+            
+        </div>
+{% endif %}
+            {% endfor %}
     
     </section>
 <!--Fin DE LA TROISIEME SECTION-->
