--- a/templates/how_to/index.html.twig
+++ b/templates/how_to/index.html.twig
@@ -81,6 +81,7 @@
             </div>
 
             <p>Planifiez votre cours avec votre mentor en respectant la charte de Platon et rencontrez-vous. Récompensez son travail par votre <span class="textebold">crédit temps.</span class="textebold"></br>
+            Faites un premier contact et planifiez vos séances visios grâce à notre communautée <a href="https://discord.gg/hPDD6jDBvQ">discord</a></p>
           </div>
 
           <div class="d-flex offset-3 col-md-3">
