--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -284,7 +284,7 @@
                   
                 <div class="d-flex">
                   <div class="d-flex photobadge">
-                      <img class="portrait" src="{{asset('assets/img/alain.png')}}" alt="photo d'Alain">
+                      <img class="portrait" src="{{asset('assets/img/lucile2.png')}}" alt="photo d'Alain">
                       <img class="medaille" src="{{asset('assets/icones/medaille_beige.svg')}}" alt="badge">
                     </div>
                   
@@ -589,7 +589,7 @@
         
             
         </div>
-{% endif %}
+            {% endif %}
             {% endfor %}
     
     </section>
@@ -605,7 +605,7 @@
               
             <div class="d-flex">
               <div class="d-flex photobadge">
-                  <img class="portrait" src="{{asset('assets/img/michel.png')}}" alt="photo de Michel">
+                  <img class="portrait" src="{{asset('assets/img/lucile2.png')}}" alt="photo de Michel">
                   <img class="medaille" src="{{asset('assets/icones/medaille_bleu.svg')}}" alt="badge">
                 </div>
               
