--- a/templates/how_to/index.html.twig
+++ b/templates/how_to/index.html.twig
@@ -1,42 +1,16 @@
 {% extends 'layout.html.twig' %}
-<<<<<<< HEAD
-
-{% block stylesheets %}
-	<link rel="stylesheet" href="{{asset ('assets/styles/comment_ca_marche.css')}}">
-
-{% endblock %}
-=======
->>>>>>> fa0dbbd73f6a7e82dfbcedeee1319e244d81ccf5
 
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{{asset('assets\styles\comment_ca_marche.css')}}">
+	<link rel="stylesheet" href="{{asset('assets\styles\comment_ca_marche.css')}}">
 {% endblock %}
 
 {% block title %}
-    HowTo
+	HowTo
 {% endblock %}
 
-<<<<<<< HEAD
+
 {% block innerContent %}
-	<header>
-
-		<div class="container-fluid">
-			<div class="container">
-				<div class="row">
-
-					<div class="titre text-center">
-						<h1>La communauté Platon,</br>comment ça marche ?</h1>
-				</div>
-			</div>
-		</div>
-	</div>
-
-</header>
-
-
-<main>
-
 	<div class="container">
 
 		<section class="concept1">
@@ -58,12 +32,12 @@
 				</div>
 
 				<div class="d-flex offset-3 col-md-3">
-					<img src="{{asset ('assets/icones/chrono_grand.svg')}}" alt="Créez mon compte" id="moncompte">
+					<img src="{{asset('assets/illustrations/chrono.svg')}}" alt="Créez mon compte" id="moncompte">
 				</div>
 			</div>
 
 			<div class="fleche3">
-				<img src="{{asset ('assest/img/fleche1.png')}}" alt="sectionfleche1">
+				<img src="{{asset('assets/img/fleche1.png')}}" alt="sectionfleche1">
 			</div>
 
 		</section>
@@ -74,7 +48,7 @@
 			<div class="row align-items-center" id="etape">
 
 				<div class="d-flex offset col-md-4">
-					<img src="{{asset ('assets/icones/loupe.svg')}}" alt="Trouvez un savoir" id="savoir">
+					<img src="{{asset('assets/illustrations/loupe.svg')}}" alt="Trouvez un savoir" id="savoir">
 				</div>
 
 
@@ -91,7 +65,7 @@
 			</div>
 
 			<div class="fleche2">
-				<img src="{{asset ('assets/img/fleche2.png')}}" alt="sectionfleche2">
+				<img src="{{asset('assets/img/fleche2.png')}}" alt="sectionfleche2">
 			</div>
 
 
@@ -117,12 +91,12 @@
 			</div>
 
 			<div class="d-flex offset-3 col-md-3">
-				<img src="{{asset ('assets/illustrations/main.svg')}}" alt="Apprendre de nouvelles choses" id="choses">
+				<img src="{{asset('assets/illustrations/main.svg')}}" alt="Apprendre de nouvelles choses" id="choses">
 			</div>
 		</div>
 
 		<div class="fleche3">
-			<img src="{{asset ('assets/img/fleche1.png')}}" alt="sectionfleche3">
+			<img src="{{asset('assets/img/fleche1.png')}}" alt="sectionfleche3">
 		</div>
 
 	</section>
@@ -134,7 +108,7 @@
 		<div class="row align-items-center" id="etape">
 
 			<div class="d-flex col-md-5">
-				<img src="{{asset ('assets/illustrations/arbre.svg')}}" alt="Partagez vos connaissances" id="connaissances">
+				<img src="{{asset('assets/illustrations/arbre.svg')}}" alt="Partagez vos connaissances" id="connaissances">
 			</div>
 
 
@@ -183,7 +157,7 @@
 		: les personnes devront avoir réalisé
 		<span class="textebold">au moins 40 cours</span>
 		via
-																																				              la plateforme Platon pour bénéficier de ce service d’accompagnement.
+		              la plateforme Platon pour bénéficier de ce service d’accompagnement.
 	</p>
 </div>
 
@@ -195,177 +169,4 @@
 		<a class="boutonensavoirplus" href="#">En savoir plus</a>
 	</div>
 
-
-	<!-- Option 1: Bootstrap Bundle with Popper -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-	<script>
-		let catalogue = document.getElementById('catalogue')
-let modale = document.getElementById('modale')
-
-catalogue.addEventListener("click", () => {
-if (modale.className == "seen") {
-modale.className = "hidden"
-} else {
-modale.className = "seen"
-}
-})
-	</script>
-
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
-
-</div></div></section></div></main>{% endblock %}
-=======
-
-{% block innerContent %}
-    <div class="container">
-
-      <section class="concept1">
-
-        <div class="row align-items-center" id="etape">
-
-          <div class="col-md-6">
-
-            <div class="d-flex align-items-center">
-              <h2>1.</h2>
-              <h3>Créez votre compte</h3>
-            </div>
-
-            <p> Inscrivez-vous sur Platon en seulement quelques clics. Puis, complétez <span class="textebold">votre profil</span> pour bénéficier de votre première heure de cours.</p>
-
-          </div>
-
-          <div class="d-flex offset-3 col-md-3">
-            <img src="{{asset('assets/illustrations/chrono.svg')}}" alt="Créez mon compte" id="moncompte">
-          </div>
-        </div>
-
-        <div class="fleche3">
-          <img src="{{asset('assets/img/fleche1.png')}}" alt="sectionfleche1">
-        </div>
-
-      </section>
-
-
-      <section class="concept2">
-
-        <div class="row align-items-center" id="etape">
-
-          <div class="d-flex offset col-md-4">
-            <img src="{{asset('assets/illustrations/loupe.svg')}}" alt="Trouvez un savoir" id="savoir">
-          </div>
-
-
-          <div class="offset-3 col-md-5">
-            <div class="d-flex align-items-center trouversavoir">
-              <h2>2.</h2>
-              <h3>Découvrez les savoirs</h3>
-            </div>
-
-            <p>Consultez <span class="textebold">le catalogue des savoirs</span> alimenté par la communauté. Entrez en contact avec les autres membres pour réserver vos cours.</p>
-          </div>
-        </div>
-
-        <div class="fleche2">
-          <img src="{{asset('assets/img/fleche2.png')}}" alt="sectionfleche2">
-        </div>
-
-
-      </section>
-
-
-
-
-      <section class="concept3">
-
-
-        <div class="row align-items-center" id="etape">
-
-          <div class="col-md-6">
-
-            <div class="d-flex align-items-center">
-              <h2>3.</h2>
-              <h3>Apprenez de nouvelles choses</h3>
-            </div>
-
-            <p>Planifiez votre cours avec votre mentor en respectant la charte de Platon et rencontrez-vous. Récompensez son travail par votre <span class="textebold">crédit temps.</span class="textebold"></br>
-          </div>
-
-          <div class="d-flex offset-3 col-md-3">
-            <img src="{{asset('assets/illustrations/main.svg')}}" alt="Apprendre de nouvelles choses" id="choses">
-          </div>
-        </div>
-
-        <div class="fleche3">
-          <img src="{{asset('assets/img/fleche1.png')}}" alt="sectionfleche3">
-        </div>
-
-      </section>
-
-
-
-      <section class="concept4">
-
-
-        <div class="row align-items-center" id="etape">
-
-          <div class="d-flex col-md-5">
-            <img src="{{asset('assets/illustrations/arbre.svg')}}" alt="Partagez vos connaissances" id="connaissances">
-          </div>
-
-
-          <div class="offset-2 col-md-5">
-
-            <div class="d-flex align-items-center">
-              <h2>4.</h2>
-
-              <h3>Partagez vos connaissances</h3>
-            </div>
-
-            <p>À votre tour, gagnez des crédits temps en partageant <span class="textebold">vos connaissances et savoirs</span> avec les autres membres.
-              <br>Aidez-nous à faire grandir la communauté Platon !
-            </p>
-          </div>
-        </div>
-
-
-      </section>
-
-    </div>
-
-
-
-    <section class="endsection">
-
-      <div class="container">
-
-
-
-        <div class="row">
-
-          <div class="col-md-7 supermentor">
-
-            <h3>Le programme super mentor</h3>
-
-            <br><span class="textebold">Faites de votre passion votre métier !</span> <br>
-          </br>
-          Conseils personnalisés, master classes, entretiens individuels... <br>Platon propose un <span class="textebold">coaching personnalisé</span> réservé aux membres pour lesquels transmettre leurs savoirs est devenu une vocation. <br></br><span class="textebold">Une seule condition</span> : les personnes devront avoir réalisé <span class="textebold">au moins 40 cours</span> via
-              la plateforme Platon pour bénéficier de ce service d’accompagnement.
-            </p>
-          </div>
-
-          <div class="offset-1 col-md-4">
-
-            <div class="d-flex justify-content-center"> <img src="{{asset('assets/icones/medaille_bleu.svg')}}" alt="medal"></div>
-            <div class="d-flex justify-content-center"><a class="boutonensavoirplus" href="#">En savoir plus</a></div>
-
-          </div>
-
-        </div>
-
-    </section>
-    </div>
-
-{% endblock %}
->>>>>>> fa0dbbd73f6a7e82dfbcedeee1319e244d81ccf5
+</div></div></section></div>{% endblock %}
