--- a/templates/sub_categories/show.html.twig
+++ b/templates/sub_categories/show.html.twig
@@ -5,6 +5,12 @@
 {% block title %}SubCategories{% endblock %}
 
 {% block innerContent %}
+
+ <header>
+    <h2>Anglais</h2>
+  </header>
+
+
     <section id="profilcard">
 
       <div class="container">
