--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,27 +19,28 @@
 		<title>Platon, donner pour apprendre</title>
 
 		<link rel="stylesheet" href="css/nav.css">
-		<link rel="stylesheet" href="css/base.css">
+		<link rel="stylesheet" href="{{asset ('assets/css/base.css')}}">
 
 		<link rel="stylesheet" href="{{asset('assets/styles/nav.css')}}">
 		{# <link rel="stylesheet" href="{{asset('assets/styles/connexion.css')}}">
-		  <link rel="stylesheet" href="{{asset('assets/styles/inscription.css')}}">
-		  <link rel="stylesheet" href="{{asset('../../assets/styles/inscription.css')}}">		 
-		  <link rel="stylesheet" href="{{asset('assets/styles/catalogue.css')}}">
-		  <link rel="stylesheet" href="{{asset('assets/styles/base.css')}}"> 
-		  <link rel="stylesheet" href="{{asset('assets/styles/index.css')}}">    #}
+														  <link rel="stylesheet" href="{{asset('assets/styles/inscription.css')}}">
+														  <link rel="stylesheet" href="{{asset('../../assets/styles/inscription.css')}}">		 
+														  <link rel="stylesheet" href="{{asset('assets/styles/catalogue.css')}}">
+														  <link rel="stylesheet" href="{{asset('assets/styles/base.css')}}"> 
+														  <link rel="stylesheet" href="{{asset('assets/styles/index.css')}}">    #}
 		{# <link rel="stylesheet" href="{{asset('assets/styles/inscription.css')}}">  #}
 
 	<link rel="icon" type="{{asset('assets/image/png')}}" href="{{asset('assets/icones/favicon.png')}}"/> </head>
 
 	{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
 	{% block stylesheets %}
-		{{ encore_entry_link_tags('app') }}
+		{# {{ encore_entry_link_tags('app') }} #}
 	{% endblock %}
 
 	{% block javascripts %}
-		{{ encore_entry_script_tags('app') }}
+		{# {{ encore_entry_script_tags('app') }} #}
 	{% endblock %}
 </html></head><body>
+
 
 {% block body %}{% endblock %}</body></html>
